[package]
name = "wave"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.7.0"
hound = "3.5.0"
softbuffer = "0.2.0"
winit = "0.28.3"
anyhow = "1.0.70"
notify-debouncer-mini = "0.2.1"
image = { version = "0.24.6", default-features = false, features = ["png"] }

[dev-dependencies]
#png = "0.17.8"
